<resources>
    <string name="app_name">STUFA</string>
    <string name="stufa">STUFA</string>
    <string name="student_financial_assistance_app">Student Financial Assistance App</string>
    <string name="bloemfontein_campus">Bloemfontein Campus</string>
    <string name="welkom_campus">Welkom Campus</string>
    <string name="bloemfontein">Bloemfontein</string>
    <string name="welkom">Welkom</string>
    <string name="submit">SUBMIT</string>
    <string name="sign_up">SIGN UP</string>
    <string name="student_number">Student Number</string>
    <string name="funding_type">Funding Type(cash/bursary funded)</string>
    <string name="bursar">Bursar(name of bursary)</string>
    <string name="lastname">Last Name</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="firstname">First Name</string>
    <string name="please_enter_your_username">Please Enter Your Username</string>
    <string name="please_enter_your_password">Please Enter Your Password</string>
    <string name="please_enter_your_email_address">Please Enter Your Email Address</string>
    <string name="password_successfully_sent_to_your_email_address">Password successfully sent to your email address</string>
    <string name="dont_have_an_account_create_one_here">Don\'t have an account? Create one here</string>
    <string name="you_will_be_sent_a_link">You will be sent a link to your email to reset your password</string>
    <string name="username_email">Username/Email Address</string>
    <string name="error">Error: </string>
    <string name="select_your_campus">Select your campus:</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account? Login in here…</string>
    <string name="welcome_to_the_student_financial_assistant_home_page">Welcome to the Student Financial Assistant Home Page</string>
    <string name="hello">Hello</string>
    <string name="refresh_bookings">Refresh Bookings</string>
    <string name="download">Download</string>
    <string name="how_can_we_be_of_your_assistance">How can we be of your assistance?</string>
    <string name="student_home">Student Home</string>
    <string name="back">Back</string>
    <string name="create_new_account">Create New Account</string>
    <string name="reset_password">Reset Password</string>
    <string name="please_choose_your_campus">Please choose your campus!</string>
    <string name="create_a_query">Create A Query</string>
    <string name="allowance_related_query">Allowance Related Query</string>
    <string name="book_allowance">- Book Allowance</string>
    <string name="meal_allowance">- Meal Allowance</string>
    <string name="profile">Profile</string>
    <string name="accommodation_or_transport_allowance">- Accommodation/Transport Allowance</string>
    <string name="booking">Booking</string>
    <string name="booking_message">- Create a face-to-face booking for any complex/related queries</string>
    <string name="general_query">General Query</string>
    <string name="general_query_message">- Any complex queries besides the ones mentioned above with clear explanations</string>
    <string name="create_a_request">Create A Request</string>
    <string name="financial_statement">Financial Statement</string>
    <string name="this_allows_statement">- This allows the Student to access and download their financial statement</string>
    <string name="financial_clearance">Financial Clearance</string>
    <string name="this_allows_clearance">- This allows the Student to request financial clearance</string>
    <string name="fill_form">Fill in a form</string>
    <string name="this_allows_fill_form">- This allows the Student to fill in a form</string>
    <string name="todo">TODO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="empty"></string>
    <string name="fs_sent">Financial Statement Request Sent!</string>
    <string name="fc_sent">Financial Statement Request Sent!</string>
    <string name="create_your_booking_below">Create Your Booking Below</string>
    <string name="click_on_the_calendar_to_choose_a_date_for_booking">Click on the calendar to choose a date for booking</string>
    <string name="query_related_booking">QueryRelatedBooking</string>
    <string name="general_booking">General booking</string>
    <string name="allows_the_student_to_get_assistance_on_any_complex_issues">- Allows the student to get assistance on any complex issues</string>
    <string name="request_related_booking">Request related booking</string>
    <string name="_financial_clearance">- Financial Clearance</string>
    <string name="_financial_statement">- Financial Statement</string>
    <string name="create">Create</string>
    <string name="your_booking_details">Your booking details:</string>
    <string name="delete">Delete</string>
    <string name="choose_the_type_of_query">Choose the type of query</string>
    <string name="describe_your_selected_query_in_detail">Describe your selected query in detail:</string>
    <string name="list_of_queries">List of queries:</string>
    <string name="create_a_request_below">Create A Request Below</string>
    <string name="choose_the_request_type">Choose the request type:</string>
    <string name="this_allows_the_student_to_access_and_download_their_financial_statement">This allows the Student to access and download their financial statement</string>
    <string name="view_financial_statement">View Financial Statement</string>
    <string name="this_allows_the_student_to_request_for_financial_clearance">This allows the Student to request for financial clearance</string>
    <string name="request_financial_clearance">Request Financial Clearance</string>
    <string name="cancel_back_to_home_page">Back To Home Page</string>
    <string name="edit_your_booking_details">Edit your booking details:</string>
    <string name="ticket_number">Ticket Number:</string>
    <string name="submit_to_your_institution_financial_aid_office_student_support_office">Submit to your institution Financial Aid Office/Student Support Office</string>
    <string name="line">-------------------------------------------------------------------</string>
    <string name="note_1_please_complete_all_the_details_below_to_enable_the_processing_of_your_appeal_incomplete_appeal_forms_will_not_be_considered_2_appeals_will_only_be_considered_on_valid_grounds_the_types_of_appeals_are_listed_below_for_indication_3_appeals_for_post_graduate_studies_or_unfunded_programmes_cannot_be_considered_4_appeals_will_be_considered_by_the_institutions_financial_aid_committee_or_designated_committee_for_recommendation_to_the_financial_aid">NOTE: 1. Please complete all the details below to enable the processing of your appeal, incomplete appeal forms will not be considered. 2. Appeals will only be considered on valid grounds. The types of appeals are listed below for indication. 3. Appeals for post graduate studies or unfunded programmes cannot be considered. 4. Appeals will be considered by the Institutions Financial Aid Committee or designated committee for recommendation to the Financial Aid</string>
    <string name="personal_information">Personal Information</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="id_number">ID Number:</string>
    <string name="student_number_">Student Number:</string>
    <string name="application_ref_no">Application Ref No.:</string>
    <string name="institution_name">Institution Name:</string>
    <string name="current_course">Current Course:</string>
    <string name="year_of_study">Year Of Study:</string>
    <string name="latest_year_of_funding">Latest Year of Funding:</string>
    <string name="current_funding_status">Current Funding Status:</string>
    <string name="appeal_category">Appeal Category</string>
    <string name="new_appeal">New Appeal</string>
    <string name="returning_student">Returning Student</string>
    <string name="date_of_appeal">Date Of Appeal</string>
    <string name="reason_for_appeal_tick_relevant_box">Reason For Appeal(tick relevant box)</string>
    <string name="_1_failure_to_meet_academic_performance_requirements">1. Failure to meet academic performance requirements</string>
    <string name="the_financial_aid_is_aware_that_there_are_many_circumstances_that_may_lead_to_students_not_being_able_to_meet_academic_performance_requirements_these_may_include_but_not_be_limited_to_medical_conditions_death_of_an_immediate_family_member_etc_please_submit_substantive_documents_to_provide_proof_of_these_circumstances">- The Financial Aid is aware that there are many circumstances that may lead to students not being able to meet academic performance requirements. These may include, but not be limited to, medical conditions, death of an immediate family member, etc. Please submit substantive documents to provide proof of these circumstances.</string>
    <string name="_2_change_in_financial_circumstances">2. Change in financial circumstances</string>
    <string name="please_provide_proof_of_loss_of_employment_this_may_include_any_of_the_following_uif_retrenchment_letter_dismissal_letterin_cases_of_a_change_in_job_with_a_lower_salary_the_financial_aid_requires_that_you_provide_official_payslips_forthe_most_recent_three_months_all_documents_should_be_on_official_letterheads_and_certified_if_copies_are_being_provided">- Please provide proof of loss of employment. This may include any of the following:• UIF• Retrenchment letter• Dismissal letterIn cases of a change in job with a lower salary, the Financial Aid requires that you provide official payslips forthe most recent three months All documents should be on official letterheads and certified if copies are being provided.</string>
    <string name="_3_loss_of_bursary_sponsor">3. Loss of Bursary Sponsor</string>
    <string name="if_you_were_sponsored_for_your_studies_by_another_entity_or_person_in_the_past_but_subsequently_lost_this_sponsorship_please_provide_proof_of_the_loss_of_sponsorship_on_official_letterheads_a_financial_aid_application_form_together_with_all_required_supporting_documentation_needs_to_be_completed_and_submitted_with_this_form">- If you were sponsored for your studies by another entity or person in the past, but subsequently lost this sponsorship, please provide proof of the loss of sponsorship on official letterheads. A Financial Aid application form, together with all required supporting documentation, needs to be completed and submitted with this form.</string>
    <string name="_4_incorrect_academic_results_submitted_resulting_in_nonrenewal_of_funding">4. Incorrect academic results submitted resulting in nonrenewal of funding</string>
    <string name="if_you_believe_your_funding_has_not_been_renewed_due_to_erroneous_academic_results_submitted_by_the_institution_to_the_financial_aid_please_attach_an_official_academic_results_transcript">- If you believe your funding has not been renewed due to erroneous academic results submitted by the institution to the Financial Aid, , please attach an official academic results transcript</string>
    <string name="_5_i_completed_a_gap_year_due_to_academic_performance">5. I completed a GAP year due to academic performance</string>
    <string name="announcements">Announcements</string>
    <string name="create_query">Create Query</string>
    <string name="create_request">Create Request</string>
    <string name="create_booking">Create Booking</string>
    <string name="fill_in_a_form">Fill In A Form</string>
    <string name="logout">Logout</string>
    <string name="download_financial_statement">Download Financial Statement</string>
</resources>