<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_announcements"
            android:icon="@drawable/announcement"
            android:title="@string/announcements" />

        <item
            android:id="@+id/nav_create_query"
            android:icon="@drawable/query"
            android:title="@string/create_query" />

        <item
            android:id="@+id/nav_create_request"
            android:icon="@drawable/request"
            android:title="@string/create_request" />


        <item
            android:id="@+id/nav_create_booking"
            android:icon="@drawable/booking"
            android:title="@string/create_booking" />

        <item
            android:id="@+id/nav_fill_form"
            android:icon="@drawable/fill_in_form"
            android:title="@string/fill_in_a_form" />

    </group>


    <item android:title="@string/profile">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/person"
                    android:title="@string/profile" />

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/lock_out"
                    android:title="@string/logout" />

            </group>
        </menu>

    </item>


</menu>