<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/app_background"
    tools:context=".activities.CreateRequest">

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/create_a_request_below"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:padding="20dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/app_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/choose_the_request_type"
            android:textColor="@color/navy_blue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFinancialStatement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/financial_statement"
            android:textColor="@color/navy_blue"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_allows_the_student_to_access_and_download_their_financial_statement"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnViewFinancialStatement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_financial_statement" />

        <Button
            android:id="@+id/btnDownloadStatement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_financial_statement" />

        <TextView
            android:id="@+id/tvFinancialClearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/financial_clearance"
            android:textColor="@color/navy_blue"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_allows_the_student_to_request_for_financial_clearance"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnRequestFinancialClearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_financial_clearance" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="85dp"
        android:text="@string/cancel_back_to_home_page" />
</LinearLayout>